# setuptools-scmx

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  agents.md  pyproject.toml  setup.py
.github/workflows/: pyprojectr.yaml  release.yaml
src/setuptools_scmx/: __init__.py  models.py  schemes.py
tests/: conftest.py  test_models.py  test_schemes.py  test_version_scheme.py
