[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80", "setuptools-scm[toml]"]

[project]
name = "setuptools-scmx"
authors = [{name = "Rowland Ogwara", email = "r.ogwara@gmail.com"}]
description = "CI friendly setuptools-scm hooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools-scm[toml]",
    "attrs",
    "cattrs>=26.1.0",
    "pyprojectr>=0.1.0",
]
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = {text = "Apache-2.0"}

[project.urls]
Source = "https://github.com/kulgan/setuptools-scmx"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.pytest]
minversion = "9.0"

[tool.pyupgrade]
py310-plus = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setuptools-scmx]
scheme = "branch-aware-scheme"

[tool.setuptools-scmx.branch-scheme]
labels = [
    {label = "rc", branches = ["master", "main"]},
    {label = "post", branches = ["hotfix"]},
]


