[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "pyprojectr>=0.1",
  "setuptools>=80",
  "setuptools-scm[toml]",
]

[project]
name = "setuptools-scmx"
description = "CI friendly setuptools-scm hooks"
readme = "README.md"
license = "Apache-2.0"
authors = [ { name = "Rowland Ogwara", email = "r.ogwara@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "attrs",
  "cattrs>=26.1",
  "pyprojectr>=0.1",
  "setuptools-scm[toml]",
]
[project.urls]
Source = "https://github.com/kulgan/setuptools-scmx"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.1",
]

[tool.setuptools.packages.find]
where = [ "src" ]
namespaces = false

[tool.setuptools_scm]
local_scheme = "node-and-date"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pyproject-fmt]
table_format = "long"
collapse_tables = [ "project.authors" ]

[tool.pytest]
minversion = "9.0"

[tool.setuptools-scmx]
scheme = "branch-scheme"

# scmx branch scheme config
[tool.setuptools-scmx.branch-scheme]
labels = [
  { label = "rc", branches = [ "master", "main" ] },
  { label = "post", branches = [ "hotfix" ] },
]
