[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "pyprojectr>=0.1",
  "setuptools>=80",
  "setuptools-scm[toml]",
]

[project]
name = "setuptools-scmx"
description = "CI friendly setuptools-scm hooks"
readme = "README.md"
license = "Apache-2.0"
authors = [ { name = "Rowland Ogwara", email = "r.ogwara@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "attrs",
  "cattrs>=26.1",
  "pyprojectr>=0.1",
  "setuptools-scm[toml]",
]
[project.urls]
Source = "https://github.com/kulgan/setuptools-scmx"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.1",
]

[tool.setuptools.packages.find]
where = [ "src" ]
namespaces = false

[tool.setuptools_scm]
local_scheme = "node-and-date"

[tool.ruff]
target-version = "py311"
line-length = 120
src = [ "src", "tests" ]
[tool.ruff.lint]
select = [
  "E",   # pydocstyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8 naming
  "RUF", # ruff specific rules
  "UP",  # pyupgrade
  "W"  # pydocstyle warnings
]

[tool.pyproject-fmt]
table_format = "long"
collapse_tables = [ "project.authors" ]

[tool.pytest]
minversion = "9.0"
addopts = [ "-rfE", "--color=yes", "--cov=pyprojectr", "--cov-report=term" ]
log_cli = true
log_cli_level = "INFO"
norecursedirs = [
  ".git",
  ".tox",
  "build",
]
testpaths = [ "tests" ]

[tool.tox]
isolated_build = true
skip_missing_interpreters = true
requires = [ "tox >= 4.20", "tox-uv >= 1.20" ]
env_list = [ "py311", "py312", "py313", "py314", "py315" ]

# pre-commit hooks
[tool.tox.env.pre-commit]
base_python = "py313"
runner = "uv-venv-runner"
skip_install = true
deps = [ "pre-commit" ]
commands = [ [ "pre-commit", "run", "--all-files", "--color=always" ] ]

# publish env
[tool.tox.env.publish]
skip_install = true
runner = "uv-venv-runner"
deps = [ "twine", "build" ]
pass_env = [ "TWINE_PASSWORD", "TWINE_REPOSITORY" ]
set_env = [ { TWINE_USERNAME = { replace = "env", name = "TWINE_USERNAME", default = "__token__" } } ]
commands = [
  [ "python", "-m", "build", "--outdir", "dist" ],
  [ "twine", "upload", { replace = "posargs", extend = true }, "dist/*" ]
]

# base env config
[tool.tox.env_run_base]
usedevelop = true
runner = "uv-venv-lock-runner"
dependency_group = [ "dev" ]
commands = [
  [
    "python",
    "-m",
    "pytest",
    "-lv",
    { replace = "posargs", default = [ "--cov-report=html", "--cov-report=xml", "--junit-xml=report.xml" ], extend = true },
  ]
]

[tool.setuptools-scmx]
scheme = "branch-scheme"

# scmx branch scheme config
[tool.setuptools-scmx.branch-scheme]
labels = [
  { name = "rc", branches = [ "master", "main" ] },
  { name = "post", branches = [ "hotfix" ] },
]
